--- a/templates/category_index.html
+++ b/templates/category_index.html
@@ -22,10 +22,10 @@
 	<table BORDER="0" CELLPADDING="0" CELLSPACING="10">
 	<tr><td colspan=7><hr noshade></td></tr>
 	<tr>
-	<th>{%trans 'key_name' %}</th>
-	<th>{%trans 'index' %}</th>
-	<th>{%trans 'name(category)' %}</th>
-	<th>{%trans 'description(category)' %}</th>
+	<th>{%trans 'key_name' %} | </th>
+	<th>{%trans 'index' %} | </th>
+	<th>{%trans 'name(category)' %} | </th>
+	<th>{%trans 'description(category)' %} | </th>
 	<th>{%trans 'etc' %}</th>
 	</tr>
 	<tr><td colspan=7><hr noshade></td></tr>
