--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,6 @@
 		<a href="/page">{% trans 'Pages' %}</a>
 		<a href="/content">{% trans 'Contents' %}</a>
 		<a href="/play/new/input">{% trans 'Play' %}</a>
-
 		{% ifequal mode 2 %}
 			<a href="/link">{% trans 'Links' %}</a>
 			<a href="/apitest">{% trans 'API' %}</a>
@@ -28,7 +27,7 @@
 			<a href="/account/logout">{% trans 'logout' %}</a>
 		{% endif %}
 		<br \>
-		* Maintainer : Seonghyun Kim (shyeon.kim@scipi.net)
+		* support : support@scipi.net
 	{% else %}
 		<a href="/account/fblogin">{% trans 'fblogin' %}</a>
 		<a href="/account/weblogin/input">{% trans 'weblogin' %}</a>
